--- a/app/templates/tweet.html
+++ b/app/templates/tweet.html
@@ -1,6 +1,6 @@
 <html> 
     <head>
-        <link rel="stylesheet" href="../style.css" type="text/css"/>
+        <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}" type="text/css"/>
     </head>
     <body id="homeBody">
             <nav class="navbar">
