--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -23,16 +23,19 @@
                         <button>Submit</button>
                         <br/>
                         <span>Sort By:</span>
-                        <button>Impact</button>
-                        <button>Favorites</button>
-                        <button>Reweets</button>
-                        <button>Replies</button>
-                        <select>
-                            {% for window in timeWindows %}
-                            <option value="{{ window.time }}">{{ window }}</option>
-                            {% endfor %}
-                        </select>
-                        <input type="checkbox"> Ascending </input>
+                        <form action= "/history" method= "POST">
+                            <input type="submit" name="sortBy", value= "Impact"/>
+                            <input type="submit" name="sortBy", value= "Favorites"/>
+                            <input type="submit" name="sortBy", value= "Retweets"/>
+                            <input type="submit" name="sortBy", value= "Replies"/>
+                            
+                            <select>
+                                {% for window in timeWindows %}
+                                <option value="{{ window.time }}">{{ window }}</option>
+                                {% endfor %}
+                            </select> 
+                            <input type="checkbox" name="ascending"> Ascending </input>
+                        </form>
 
                     </div>
                     <br/>
