--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -8,10 +8,10 @@
                     
                     <h1 class="logo"><a href="#">OGWDIS</a></h1>
                     <ul class="nav nav-right">
-                    <li><a href="home">Home</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Preferences</a></li>
+                            <li><a href="home">Home</a></li>
+                            <li><a href="#">History</a></li>
+                            <li><a href="settings">Settings</a></li>
+                            <li><a href="preferences">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
@@ -45,10 +45,10 @@
                             <th>Favorites</th>
                             <th>Retweets</th>
                             <th>Replies</th>
-                            <th>Handles Mentioned</th>
+                            <th>View Tweet</th>
                         </tr>
+                        {% for tweet in tweets %}
                         <tr>
-                            {% for tweet in tweets %}
                             <td>{{ tweet.id }}</td>
                             <td>{{ tweet.dateTime }}</td>
                             <td>{{ tweet.content }}</td>
@@ -56,8 +56,9 @@
                             <td>{{ tweet.favorites }}</td>
                             <td>{{ tweet.retweets }}</td>
                             <td>{{ tweet.replies }}</td>
-                            {% endfor %}
+                            <td><a href="tweet/{{ tweet.id }}">View</a></a></td>
                         </tr>
+                        {% endfor %}
                     </table>
                 </div>
 
