--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,9 +9,9 @@
                     <h1 class="logo"><a href="#">OGWDIS</a></h1>
                     <ul class="nav nav-right">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Preferences</a></li>
+                    <li><a href="history">History</a></li>
+                    <li><a href="settings">Settings</a></li>
+                    <li><a href="preferences">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
@@ -29,7 +29,7 @@
                         </select>
                     </div>
                     <br/>
-                    <table>
+                    <table id="topFiveTable">
                         <tr>
                             <th>#</th>
                             <th>Date/Time</th>
@@ -38,10 +38,12 @@
                         </tr>
                         <tr>
                             {% for tweet in tweets %}
-                            <td>{{ tweet.id }}</td>
-                            <td>{{ tweet.dateTime }}</td>
-                            <td>{{ tweet.content }}</td>
-                            <td>{{ tweet.impact }}</td>
+                            <tr>
+                                <td>{{ tweet.id }}</td>
+                                <td>{{ tweet.dateTime }}</td>
+                                <td>{{ tweet.content }}</td>
+                                <td>{{ tweet.impact }}</td>
+                            </tr>
                             {% endfor %}
                         </tr>
                     </table>
@@ -64,7 +66,9 @@
                                 <th>Phrases To Avoid</th>
                             </tr>
                             {% for word in phrasesToAvoid %}
-                            <tr> <td> {{ word }} </td></tr>
+                            <tr> 
+                                <td> {{ word }} </td>
+                            </tr>
                             {% endfor %}
                         </table>
                     </div>
