--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,13 +5,15 @@
     <body id="loginBody">
         <div id="loginContainer">
             <h1 style="width: 100%; text-align: center;">OGWDIS</h1>
-            <form id="loginForm">
+            <form method="POST" id="loginForm">
                 <label for="email">Email: </label><br/>
                 <input type="text" name="email"/><br/>
                 <label for="password">Password: </label><br/>
                 <input type="password" name="password"/><br/>
                 <button type="submit" style="margin-left: 4rem;" class='btn'>Log in</button>
             </form>
+            <br/>
+            <p style="color:red">{{ error }}</p>
         </div>
     </body>
 </html>
