--- a/app/templates/preferences.html
+++ b/app/templates/preferences.html
@@ -7,30 +7,32 @@
                 <div class="container">
                     
                     <h1 class="logo"><a href="#">OGWDIS</a></h1>
-                    <ul class="nav nav-right">
-                    <li><a href="home">Home</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Preferences</a></li>
+                     <ul class="nav nav-right">
+                        <li><a href="home">Home</a></li>
+                        <li><a href="history">History</a></li>
+                        <li><a href="settings">Settings</a></li>
+                        <li><a href="#">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
             <div class="container" style="display: flex;justify-content: space-evenly;">
                 <div class="homeContent">
-                    <h1>Settings:</h1>
-                    <form style="text-align: center;">
-                        <span>Change Username:</span>
-                        <input type="text" name="username" placeholder="Username"/>
+                    <h1>Preferences:</h1>
+                    <form method="POST" style="text-align: center;">
+                        <span>Change Email:</span>
+                        <input type="text" name="email" placeholder="Email"/>
                         <br>
                         <span>Change Password:</span>
                         <input type="text" name="password" placeholder="Password"/>
                         <input type="text" name="confirmPassword" placeholder="Confirm Password"/>
                         <br>
                         <button>Connnect Another Twitter Account</button>
-                        <button>Delete Account</button>
                         <button type="submit">Save Changes</button>
                     <form>
+                    <button  type="button" onclick="window.location='{{ url_for( 'deleteAcct' , table='Y' ) }}';">Delete Account</button>
 
+                    <p>{{ res }}</p>
+                    <p style="color:red">{{ error }}</p>
                 </div>
 
             </div>
