--- a/app/templates/tweet.html
+++ b/app/templates/tweet.html
@@ -8,10 +8,10 @@
                     
                     <h1 class="logo"><a href="#">OGWDIS</a></h1>
                     <ul class="nav nav-right">
-                    <li><a href="home">Home</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Preferences</a></li>
+                        <li><a href="/home">Home</a></li>
+                        <li><a href="/history">History</a></li>
+                        <li><a href="/settings">Settings</a></li>
+                        <li><a href="/preferences">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
