--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,9 +11,8 @@
                 <label for="password">Password: </label><br/>
                 <input type="password" name="password"/><br/>
                 <button type="submit" style="margin-left: 4rem;" class='btn'>Log in</button>
+                <center><p style="color:red">{{ error }}</p></center>
             </form>
-            <br/>
-            <p style="color:red">{{ error }}</p>
         </div>
     </body>
 </html>
