Tweet view now displays resultant followers

--- a/app/templates/tweet.html
+++ b/app/templates/tweet.html
@@ -41,7 +41,7 @@
                         <div class="">
                                 <p>Follows:{{ tweet.follows }}</p>
                                 <p>Unfollows:{{ tweet.unfollows }}</p>
-                                <p>Net Follows:{{ tweet.netFollows }}</p>
+                                <p>Net Follows:{{ tweet.impact }}</p>
                         </div>
                         <div style="flex-grow:1; padding: 15px;"> 
                             <table>
