--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -11,7 +11,7 @@
                 <label for="password">Password: </label><br/>
                 <input type="password" name="password"/><br/>
                 <label for="confirmPassword">Confirm Password: </label><br/>
-                <input type="confirmPassword" name="password"/><br/>
+                <input type="password" name="confirmPassword"/><br/>
                 <button type="submit" style="margin-left: 4rem;" class='btn'>Sign Up1</button>
             </form>
         </div>
