--- a/app/templates/fakeFunction.html
+++ b/app/templates/fakeFunction.html
@@ -24,8 +24,8 @@
                         <label for="handle">Handle: </label><br/>
                         <input type="text" name="handle" placeholder="Enter handle"/>
                         <br/>
-                        <input type="radio" group="gainOrLoss" value="gain"> Gain
-                        <input type="radio" group="gainOrLoss" value="loss"> Loss
+                        <input type="radio" group="gainOrLoss" value="1"> Gain
+                        <input type="radio" group="gainOrLoss" value="-1"> Loss
                         <br/>
                         <button type="submit">Submit</button>
                     </form>
@@ -34,7 +34,7 @@
                     <h2>Fake Tweet:</h2>
                     <form method="POST">
                         <label for="tweet">Tweet: </label><br/>
-                        <input type="text" name="tweet" placeholder="Enter Tweet"/>
+                        <input type="text" name="tweet" placeholder="Enter Tweet:"/><br/>
                         <br/>
                         <button type="submit">Submit</button>
                     </form>
