--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,11 +1,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}" type="text/css"/>
+        <link rel="icon" href="data:,">
     </head>
     <body id="loginBody">
         <div id="loginContainer">
             <h1 style="width: 100%; text-align: center;">OGWDIS</h1>
-            <form id="loginForm">
+            <form method = 'POST' id="loginForm">
                 <label for="email">Email: </label><br/>
                 <input type="text" name="email"/><br/>
                 <label for="password">Password: </label><br/>
