--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
             <nav class="navbar">
                 <div class="container">
                     
-                    <h1 class="logo"><a href="#">OGWDIS</a></h1>
+                    <h1 class="logo"><a href="#">OG: Oh God, What Did I Say?</a></h1>
                     <ul class="nav nav-right">
                     <li><a href="#">Home</a></li>
                     <li><a href="history">History</a></li>
@@ -24,11 +24,6 @@
                         <input type="submit" name="posOrNeg", value="Negative"/> 
                         <input type="submit" name="posOrNeg", value="Positive"/>
                         </form>
-                        <select>
-                            {% for window in tweetWindows %}
-                            <option value="{{ window }}">{{ window }}</option>
-                            {% endfor %}
-                        </select>
                     </div>
                     <br/>
                     <table id="topFiveTable">
