--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -6,7 +6,7 @@
             <nav class="navbar">
                 <div class="container">
                     
-                    <h1 class="logo"><a href="#">OGWDIS</a></h1>
+                    <h1 class="logo"><a href="#">OG: Oh God, What Did I Say?</a></h1>
                     <ul class="nav nav-right">
                             <li><a href="home">Home</a></li>
                             <li><a href="history">History</a></li>
