--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,7 +5,7 @@
     </head>
     <body id="loginBody">
         <div id="loginContainer">
-            <h1 style="width: 100%; text-align: center;">OGWDIS</h1>
+            <h1 style="width: 100%; text-align: center;">Oh God, Time to Create an Account</h1>
             <form method = 'POST' id="loginForm">
                 <label for="email">Email: </label><br/>
                 <input type="text" name="email"/><br/>
@@ -13,7 +13,9 @@
                 <input type="password" name="password"/><br/>
                 <label for="confirmPassword">Confirm Password: </label><br/>
                 <input type="password" name="confirmPassword"/><br/>
-                <button type="submit" style="margin-left: 4rem;" class='btn'>Sign Up1</button>
+                <label for="handle">Handle: </label><br/>
+                <input type="text" name="handle"/><br/>
+                <button type="submit" style="margin-left: 4rem;" class='btn'>Sign Up</button>
             </form>
         </div>
     </body>
