--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,15 +5,16 @@
     <body id="loginBody">
         <div id="loginContainer">
             <h1 style="width: 100%; text-align: center;">OGWDIS</h1>
-            <button onclick="window.location.href = '/signup';">Create Account</button>
             <form method="POST" id="loginForm">
                 <label for="email">Email: </label><br/>
                 <input type="text" name="email"/><br/>
                 <label for="password">Password: </label><br/>
                 <input type="password" name="password"/><br/>
-                <button type="submit" style="margin-left: 0rem;" class='btn'>Log In</button>
-                <center><p style="color:red">{{ error }}</p></center>
+                <center><button type="submit" style="margin-left: 0rem;" class='btn'>Log In</button>
+                <p style="color:red">{{ error }}</p></center>
             </form>
+            <button class="btn" onclick="window.location.href = '/signup';">Create Account</button>
+
         </div>
     </body>
 </html>
