--- a/app/templates/preferences.html
+++ b/app/templates/preferences.html
@@ -7,11 +7,11 @@
                 <div class="container">
                     
                     <h1 class="logo"><a href="#">OG: Oh God, What Did I Say?</a></h1>
-                     <ul class="nav nav-right">
-                        <li><a href="home">Home</a></li>
-                        <li><a href="history">History</a></li>
-                        <li><a href="settings">Settings</a></li>
-                        <li><a href="#">Preferences</a></li>
+                    <ul class="nav nav-right">
+                            <li><a href="home">Home</a></li>
+                            <li><a href="history">History</a></li>
+                            <li><a href="settings">Settings</a></li>
+                            <li><a href="preferences">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
@@ -19,20 +19,24 @@
                 <div class="homeContent">
                     <h1>Preferences:</h1>
                     <form method="POST" style="text-align: center;">
-                        <span>Change Email:</span>
-                        <input type="text" name="email" placeholder="Email"/>
+                        <span>Default Twitter Account:</span>
+                        <select name="account">
+                            {% for account in accounts %}
+                            <option value="{{ account }}">{{ account }}</option>
+                            {% endfor %}
+                        </select>
                         <br>
-                        <span>Change Password:</span>
-                        <input type="text" name="password" placeholder="Password"/>
-                        <input type="text" name="confirmPassword" placeholder="Confirm Password"/>
+                        <span>Adjust Tweet Association Window: </span>
+                        <select name="window">
+                            {% for window in tweetWindows %}
+                            <option value="{{ window }}">{{ window }}</option>
+                            {% endfor %}
+                        </select>
                         <br>
-                        <button>Connnect Another Twitter Account</button>
                         <button type="submit">Save Changes</button>
                     <form>
-                    <button  type="button" onclick="window.location='{{ url_for( 'deleteAcct' , table='Y' ) }}';">Delete Account</button>
-
                     <p>{{ res }}</p>
-                    <p style="color:red">{{ error }}</p>
+
                 </div>
 
             </div>
