--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -7,11 +7,11 @@
                 <div class="container">
                     
                     <h1 class="logo"><a href="#">OG: Oh God, What Did I Say?</a></h1>
-                    <ul class="nav nav-right">
-                            <li><a href="home">Home</a></li>
-                            <li><a href="history">History</a></li>
-                            <li><a href="#">Settings</a></li>
-                            <li><a href="preferences">Preferences</a></li>
+                     <ul class="nav nav-right">
+                        <li><a href="home">Home</a></li>
+                        <li><a href="history">History</a></li>
+                        <li><a href="settings">Settings</a></li>
+                        <li><a href="preferences">Preferences</a></li>
                     </ul>
                 </div>
             </nav>
@@ -19,24 +19,20 @@
                 <div class="homeContent">
                     <h1>Settings:</h1>
                     <form method="POST" style="text-align: center;">
-                        <span>Default Twitter Account:</span>
-                        <select name="account">
-                            {% for account in accounts %}
-                            <option value="{{ account }}">{{ account }}</option>
-                            {% endfor %}
-                        </select>
+                        <span>Change Email:</span>
+                        <input type="text" name="email" placeholder="Email"/>
                         <br>
-                        <span>Adjust Tweet Association Window: </span>
-                        <select name="window">
-                            {% for window in tweetWindows %}
-                            <option value="{{ window }}">{{ window }}</option>
-                            {% endfor %}
-                        </select>
+                        <span>Change Password:</span>
+                        <input type="text" name="password" placeholder="Password"/>
+                        <input type="text" name="confirmPassword" placeholder="Confirm Password"/>
                         <br>
+                        <button>Connnect Another Twitter Account</button>
                         <button type="submit">Save Changes</button>
                     <form>
-                    <p>{{ res }}</p>
+                    <button  type="button" onclick="window.location='{{ url_for( 'deleteAcct' , table='Y' ) }}';">Delete Account</button>
 
+                    <p>{{ res }}</p>
+                    <p style="color:red">{{ error }}</p>
                 </div>
 
             </div>
